[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/player/player.gd" type="Script" id=1]
[ext_resource path="res://scripts/camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/gun_holder.gd" type="Script" id=3]
[ext_resource path="res://models/gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/cross/cross.png" type="Texture" id=5]
[ext_resource path="res://shaders/displace.shader" type="Shader" id=6]
[ext_resource path="res://sounds/footsteps/footstep_1.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/footsteps/footstep_2.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/footsteps/footstep_3.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/footsteps/footstep_4.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/footsteps/footstep_5.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/footsteps/jump.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/footsteps/land.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/weapons/gun_shot.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/player/hit.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/player/hurt.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/weapons/gun_reload.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/weapons/ammo_up.wav" type="AudioStream" id=18]
[ext_resource path="res://models/suzanne.tscn" type="PackedScene" id=19]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/dispAmt = 0.0
shader_param/abberationAmtX = 0.0
shader_param/abberationAmtY = 0.0
shader_param/dispSize = 0.1
shader_param/maxAlpha = 1.0

[sub_resource type="SphereShape" id=2]
radius = 0.352499

[sub_resource type="SphereShape" id=3]
radius = 0.772436

[sub_resource type="SphereShape" id=4]
radius = 0.381085

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="head" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="camera" type="Camera" parent="head"]
far = 500.0
script = ExtResource( 2 )

[node name="gun_holder" type="Spatial" parent="head"]
editor/display_folded = true
script = ExtResource( 3 )

[node name="gun" parent="head/gun_holder" instance=ExtResource( 4 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.4, -0.8 )

[node name="muzzle" type="Spatial" parent="head/gun_holder/gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.5 )

[node name="hud" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="health" type="Label" parent="hud"]
visible = false
margin_left = 30.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 14.0
text = "HEALTH: 100"

[node name="ammo" type="Label" parent="hud"]
visible = false
margin_left = 30.0
margin_top = 60.0
margin_right = 74.0
margin_bottom = 14.0
text = "AMMO"

[node name="sprint" type="ProgressBar" parent="hud"]
visible = false
margin_left = 30.0
margin_top = 90.0
margin_right = 180.0
margin_bottom = 103.0
max_value = 2.0
value = 2.0
percent_visible = false

[node name="cross" type="TextureRect" parent="hud"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="displace" type="ColorRect" parent="hud"]
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="audio" type="Spatial" parent="."]
editor/display_folded = true

[node name="footsteps" type="Spatial" parent="audio"]
editor/display_folded = true

[node name="footstep1" type="AudioStreamPlayer3D" parent="audio/footsteps"]
stream = ExtResource( 7 )

[node name="footstep2" type="AudioStreamPlayer3D" parent="audio/footsteps"]
stream = ExtResource( 8 )

[node name="footstep3" type="AudioStreamPlayer3D" parent="audio/footsteps"]
stream = ExtResource( 9 )

[node name="footstep4" type="AudioStreamPlayer3D" parent="audio/footsteps"]
stream = ExtResource( 10 )

[node name="footstep5" type="AudioStreamPlayer3D" parent="audio/footsteps"]
stream = ExtResource( 11 )

[node name="jump" type="AudioStreamPlayer3D" parent="audio"]
stream = ExtResource( 12 )

[node name="land" type="AudioStreamPlayer3D" parent="audio"]
stream = ExtResource( 13 )

[node name="shot" type="AudioStreamPlayer3D" parent="audio"]
stream = ExtResource( 14 )

[node name="hit" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 15 )

[node name="hurt" type="AudioStreamPlayer3D" parent="audio"]
stream = ExtResource( 16 )

[node name="reload" type="AudioStreamPlayer3D" parent="audio"]
stream = ExtResource( 17 )

[node name="ammo_up" type="AudioStreamPlayer3D" parent="audio"]
stream = ExtResource( 18 )

[node name="timer_respawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="mesh" parent="." instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0 )

[node name="col_ear_L" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.08646, 0.491154, 0.385624 )
shape = SubResource( 2 )

[node name="col_eye_L" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.32797, 0.581481, -0.592269 )
shape = SubResource( 2 )

[node name="col_eye_R" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.398451, 0.581481, -0.592269 )
shape = SubResource( 2 )

[node name="col_ear_R" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.08345, 0.517958, 0.385624 )
shape = SubResource( 2 )

[node name="col_head" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.627585, 0 )
shape = SubResource( 3 )

[node name="col_mouth" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.265367, -0.5335 )
shape = SubResource( 4 )

[node name="stair_catcher" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.114662, -0.918425 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

